--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Fashion Pet</title>
     <link rel="stylesheet" href=".//styles/mystyles.css">
+    <script src="https://kit.fontawesome.com/434500d812.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./img/pinkPawIcon.png" type="image/x-icon">
 </head>
 <body>
     <header class="site-header">
