--- a/register.html
+++ b/register.html
@@ -3,18 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Register Your Pet Today!</title>
+    <link rel="stylesheet" href="./styles/mystyles.css">
+    <script src="https://kit.fontawesome.com/434500d812.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./img/pinkPawIcon.png" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <h1>The fashion pet</h1>
-    </header>
+    <div class="bg">
+        <header class="reg-header">
+            <div class="container flex-vertical"> 
+                <!-- flex-vertical effects only the div child -->
+                <div class="bar">
+                    <!-- class bar only effect a tag and nav  -->
+                    <a href="index.html"><h1>The Fashion Pet</h1></a>
+                    <nav>
+                        <a id="services" href="services.html">Services</a>
+                        <a href="register.html">Register</a>
+                        <a href="contact.html">Contact</a>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        
 
-    <main>
-        <h2>Register</h2>
-    </main>
-
-    <script src="./scripts/register.js"></script>
+        <main>
+            <div class="box-shadow">
+                <h2>Registed Pets</h2>
+                <div>
+                    <div id="petsName"></div>
+                </div>
+            </div>
+            <div class="box-shadow">
+                <h2>Total Pets in Salon</h2>
+                <div>
+                    <div id="totalPets"></div>
+                </div>
+            </div>
+        </main>
+        
+        <script src="./scripts/register.js"></script>
+    </div>
 </body>
 </html>
