--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>The Fashion Pet</title>
     <link rel="stylesheet" href=".//styles/mystyles.css">
     <script src="https://kit.fontawesome.com/434500d812.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="./img/pinkPawIcon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/lgIconFixed.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Playfair+Display:ital,wght@0,400;0,600;1,700&family=Raleway:ital,wght@0,200;0,300;0,400;0,600;1,300&display=swap" rel="stylesheet">    
 </head>
 <body>
     <header class="site-header">
