--- a/register.html
+++ b/register.html
@@ -6,7 +6,10 @@
     <title>Register Your Pet Today!</title>
     <link rel="stylesheet" href="./styles/mystyles.css">
     <script src="https://kit.fontawesome.com/434500d812.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="./img/pinkPawIcon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/lgIconFixed.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Playfair+Display:ital,wght@0,400;0,600;1,700&family=Raleway:ital,wght@0,200;0,300;0,400;0,600;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="bg">
@@ -15,7 +18,10 @@
                 <!-- flex-vertical effects only the div child -->
                 <div class="bar">
                     <!-- class bar only effect a tag and nav  -->
-                    <a href="index.html"><h1>The Fashion Pet</h1></a>
+                    <div class="flex-logo">
+                        <a href="index.html"><img src="./img/whiteicon.png" alt="white logo"></a>
+                        <a href="index.html"><h1>The Fashion Pet</h1></a>
+                    </div>
                     <nav>
                         <a id="services" href="services.html">Services</a>
                         <a href="register.html">Register</a>
