--- a/register.html
+++ b/register.html
@@ -34,6 +34,39 @@
 
         <main>
             <div class="box-shadow">
+                <h2>Register Request</h2>
+                <div>
+                    <label>Name</label>
+                    <input type="text" id="txtName">
+                </div>
+                <div>
+                    <label>Age</label>
+                    <input type="text" id="txtAge">
+                </div>
+                <div>
+                    <label>Breed</label>
+                    <input type="text" id="txtBreed">
+                </div>
+                <div>
+                    <label>Gender</label>
+                    <select id="txtGender">
+                        <option>Select Gender</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                    </select>
+                </div>
+                <div>
+                    <label>Service Request</label>
+                    <select id="txtService">
+                        <option>Select Service</option>
+                        <option value="nails">Nail Trimming</option>
+                        <option value="grooming">Grooming</option>
+                        <option value="vaccines">Vaccines</option>
+                    </select>
+                </div>
+                <button onclick="register();">Register</button>
+            </div>
+            <div class="box-shadow">
                 <h2>Registed Pets</h2>
                 <div>
                     <div id="petsName"></div>
