--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Your Pet Today!</title>
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/mystyles.css">
     <script src="https://kit.fontawesome.com/434500d812.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./img/lgIconFixed.png" type="image/x-icon">
@@ -22,6 +23,20 @@
                         <a href="index.html"><img src="./img/whiteicon.png" alt="white logo"></a>
                         <a href="index.html"><h1>The Fashion Pet</h1></a>
                     </div>
+                    <!-- <ul class="nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Active</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul> -->
                     <nav>
                         <a id="services" href="services.html">Services</a>
                         <a href="register.html">Register</a>
@@ -35,52 +50,66 @@
         <main>
             <div class="box-shadow">
                 <h2>Register Request</h2>
-                <div>
-                    <label>Name</label>
-                    <input type="text" id="txtName">
+                <div class="mb-3">
+                    <label class="form-label required">Name</label>
+                    <input class="form-control required" type="text" id="txtName">
                 </div>
-                <div>
-                    <label>Age</label>
-                    <input type="text" id="txtAge">
+                <div class="mb-3">
+                    <label class="form-label required">Age</label>
+                    <input class="form-control" type="text" id="txtAge">
                 </div>
-                <div>
-                    <label>Breed</label>
-                    <input type="text" id="txtBreed">
+                <div class="mb-3">
+                    <label class="form-label required">Breed</label>
+                    <input class="form-control" type="text" id="txtBreed">
                 </div>
-                <div>
-                    <label>Gender</label>
-                    <select id="txtGender">
-                        <option>Select Gender</option>
+                <div class="mb-3">
+                    <label class="form-label required">Gender</label>
+                    <select class="form-control" id="txtGender">
+                        <option value="" selected disabled>-- Select Gender --</option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                     </select>
                 </div>
-                <div>
-                    <label>Service Request</label>
-                    <select id="txtService">
-                        <option>Select Service</option>
+                <div class="mb-3">
+                    <label class="form-label required">Service Request</label>
+                    <select class="form-control" id="txtService">
+                        <option value="" selected disabled>-- Select Service --</option>
                         <option value="nails">Nail Trimming</option>
                         <option value="grooming">Grooming</option>
                         <option value="vaccines">Vaccines</option>
                     </select>
                 </div>
-                <button onclick="register();">Register</button>
+                <button class="btn btn-primary" onclick="register();">Register</button>
             </div>
             <div class="box-shadow">
                 <h2>Registed Pets</h2>
                 <div>
-                    <div id="petsName"></div>
+                    <div id="pets"></div>
                 </div>
             </div>
             <div class="box-shadow">
-                <h2>Total Pets in Salon</h2>
+                <h2>Pets In Line For Services</h2>
                 <div>
-                    <div id="totalPets"></div>
+                    <div class="">
+                        <table class="pet table">
+                            <thead class="thead-dark">
+                                    <th>Name</th>
+                                    <th>Age</th>
+                                    <th>Gender</th>
+                                    <th>Breed</th>
+                                    <th>Service</th>
+                            </thead>
+                            <tbody id="petTable">
+                                
+                            </tbody>     
+                        </table>
+                    </div>
                 </div>
             </div>
         </main>
         
         <script src="./scripts/register.js"></script>
+        <script src="./scripts/display.js"></script>
     </div>
 </body>
 </html>
