--- a/index.html
+++ b/index.html
@@ -6,30 +6,80 @@
     <title>The Fashion Pet</title>
     <link rel="stylesheet" href=".//styles/mystyles.css">
     <script src="https://kit.fontawesome.com/434500d812.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="./img/lgIconFixed.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/pinkLogo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Playfair+Display:ital,wght@0,400;0,600;1,700&family=Raleway:ital,wght@0,200;0,300;0,400;0,600;1,300&display=swap" rel="stylesheet">    
 </head>
 <body>
-    <header class="site-header">
-        <h1>The Fashion Pet</h1>
-        <!-- beautiful images here -->
-    </header>
-    <nav>
-        <a href="services.html">Services</a>
-        <a href="register.html">Register</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <main class="grid-two-container">
-        <img class="home-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTD281-E9NMmdfNUpFzeWrwuIzNrKlxNxdNg&usqp=CAU" alt="">
-        <div>
-            <h2>Welcome to the fashion pet!</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed incidunt, quo laboriosam earum eum provident impedit ut! Culpa dolorum sit enim repellat cumque atque quis nam, et explicabo, consectetur nesciunt.</p>
-        </div>
-        <!-- info about the pet salon -->
-    <footer>
-
-    </footer>
+    <div class="bg">
+        <header class="site-header">
+            <div class="container flex-vertical">
+                <div class="bar">
+                    <div class="flex-logo">
+                        <a href="./index.html"><img src="./img/pinkLogo.png" alt="pink Logo"></a>
+                        <div>
+                            <a href="./index.html"><h1>The Fashion Pet</h1></a>
+                            <a href="./index.html"><p>Where Fur Babies Get The Royal Treatment</p></a>
+                        </div>
+                        
+                    </div>          
+                    <nav class="flex-logo">
+                        <a href="./services.html">Services</a>
+                        <a href="./register.html">Register</a>
+                        <a href="./contact.html">Contact</a>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="container block flex-item">
+                <div class="flex-item">
+                    <h2>Bath, Brush & Beyond: What service do you need?</h2>
+                </div>
+                <div class="services">
+                    <div>
+                        <a href="./services.html"><img src="./img/grooming.png" id="grooming" alt="Grooming"></a>
+                        <a href="./services.html"><h1>Grooming</h1></a>
+                        
+                    </div>
+                    <div>
+                        <a href="./services.html"><img src="./img/nails.png" id="nails" alt="nails"></a>
+                        <a href="./services.html"><h1>Nail Trimming</h1></a> 
+                    </div>
+                    <div>
+                        <a href="./services.html"><img src="./img/vaccines.png" id="vaccines" alt="vaccines"></a>
+                        <a href="./services.html"><h1>Vaccinations</h1></a>
+                    </div>
+                </div>
+            </div>
+            <div class="white-container">
+                <div class="intro-container">
+                    <div class="intro-img">
+                        <img src="./img/funowner.png" alt="sarah the owner">
+                    </div>
+                    <div class="intro">
+                        <h1>Hi! I'm Sarah, the Paws and Whiskers Whisperer!</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto optio exercitationem consectetur reprehenderit repellendus animi? Rerum fuga, perferendis, excepturi totam voluptas quod doloribus at ipsam consectetur quibusdam non quis labore dolorum nulla in autem accusamus pariatur, minus ipsa quas. Rerum suscipit ea deserunt iure quis fugiat esse saepe ipsa quas!Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia in ipsum qui assumenda fugiat, animi placeat ipsam architecto nihil et. Cumque iusto neque consequatur unde aperiam quos quod aliquam? Repellendus!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bar">
+                    <a class="contact-btn" href="./contact.html"><h3>Questions? Contact Us Here</h3></a>
+                </div>
+            </div>
+            <!-- info about the pet salon -->
+        </main>
+        <footer class="footer">
+            <div class="container">
+                <div class="bar">
+                    <div class="flex-footer">
+                        <a href="./index.html"><img src="./img/whiteicon.png" alt="White Logo"></a>
+                        <p>Enter key word "happy pet" at checkout for 20% off! -- expires 12/31/23 --</p>
+                    </div>          
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
-<!-- </html> -->
+</html>
