--- a/services.html
+++ b/services.html
@@ -12,6 +12,81 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Playfair+Display:ital,wght@0,400;0,600;1,700&family=Raleway:ital,wght@0,200;0,300;0,400;0,600;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+        <header>
+            <div class="container flex-vertical"> 
+                <!-- flex-vertical effects only the div child -->
+                <div class="bar">
+                    <!-- class bar only effect a tag and nav  -->
+                    <div class="flex-logo">
+                        <a href="index.html"><img src="./img/pinkLogo.png" alt="pink logo"></a>
+                        <div>
+                            <a href="index.html"><h1>The Fashion Pet</h1></a>
+                            <a href="index.html"><p>Where Fur Babies Get The Royal Treatment</p></a>                           
+                        </div>
+                    </div>
+                    <nav>
+                        <a id="services" href="services.html">Services</a>
+                        <a href="register.html">Register</a>
+                        <a href="contact.html">Contact</a>
+                    </nav>
+                </div>
+            </div>
+        </header> 
+        <main class="bg">
+            <div class="container">
+                <div>
+                    <h3 class="services-h3">Services at The Fashion Pet -- Where Every Pet Is Pampered With Love 💗</h3>
+                    <div class="flex-container white-bg">
+                        <div class="services-img">
+                            <img src="./img/grooming.png" alt="grooming">
+                        </div>
+                        <div class="services-txt">
+                            <h1>Grooming Includes</h1>
+                            <p><b>Bathing & Shampoo:</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nam exercitationem. Fugit ducimus quae a consectetur sapiente quo sit. Quae aspernatur dicta atque facere iste!</p>
+                            <p><b>Haircut and Styling:</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nam exercitationem. Fugit ducimus quae a consectetur sapiente quo sit. Quae aspernatur dicta atque facere iste!</p>
+                        </div>
+                    </div>
+                    <div class="testimonial">
+                        <p><i>"Our experience at The Fashion Pet was nothing short than amazing!! We give Sarah and her salon a 10 out of 10!" Jackie Richards</i></p>
+                    </div>
+                    <div class="flex-container white-bg">
+                        <div class="services-txt">
+                            <h1>Nail Triming Includes</h1>
+                            <p><b>Pawdicures:</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nam exercitationem. Fugit ducimus quae a consectetur sapiente quo sit. Quae aspernatur dicta atque facere iste!</p>
+                            <p><b>Relaxing Paw Massages:</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nam exercitationem. Fugit ducimus quae a consectetur sapiente quo sit. Quae aspernatur dicta atque facere iste!</p>
+                        </div>
+                        <div class="services-img">
+                            <img src="./img/nails.png" alt="nails">
+                        </div>
+                    </div>
+                    <div class="testimonial">
+                        <p><i>"They pampered our furry friend like royalty, and the results were outstanding." John Smith</i></p>
+                    </div>
+                    <div class="flex-container white-bg">
+                        <div class="services-img">
+                            <img src="./img/vaccines.png" alt="">
+                        </div>
+                        <div class="services-txt">
+                            <h1>Vaccinations Includes</h1>
+                            <p><b>Flea and Tick Control:</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nam exercitationem. Fugit ducimus quae a consectetur sapiente quo sit. Quae aspernatur dicta atque facere iste!</p>
+                            <p><b>Skin and Coat Therapy:</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nam exercitationem. Fugit ducimus quae a consectetur sapiente quo sit. Quae aspernatur dicta atque facere iste!</p>
+                        </div>
+                    </div>
+                    <div class="btn-align">
+                        <a href="./register.html"><button class="btn btn-book">YES!! Let's Pamper My Pet!</button></a>  
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="container">
+                <div class="bar">
+                    <div class="flex-footer">
+                        <a href="./index.html"><img src="./img/whiteicon.png" alt="White Logo"></a>
+                        <p>Enter key word "happy pet" at checkout for 20% off! -- expires 12/31/23 --</p>
+                    </div>          
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
